clarify armor set bonuses, axs contrast fix

--- a/assets/style/variables.styl
+++ b/assets/style/variables.styl
@@ -6,7 +6,7 @@ $theme = {
   primary: $red.darken-4,
   accent: $red.darken-1,
   secondary: $indigo.darken-4,
-  info: $blue.lighten-2,
+  info: $blue.darken-2,
   warning: $amber.base,
   error: $red.accent-2,
   success: $green.base
